# SuperMarioBros-Honguitos

./: .gitignore  .travis.yml  CMakeLists.txt  Instalador.sh  LICENSE  README.md  main.cpp
Client/: Cliente.cpp  Cliente.hpp  EscuchadorSalaDeEspera.hpp  GameLoop.hpp  main  mainClient.cpp  mainClient.hpp  mainCliente.c
Client/Escuchadores/: Escuchador.hpp  EscuchadorActualizacionJugadores.cpp  EscuchadorActualizacionJugadores.hpp  EscuchadorInfoPartidaInicial.cpp  EscuchadorInfoPartidaInicial.hpp  EscuchadorInformacionPartida.cpp  EscuchadorInformacionPartida.hpp  EscuchadorLog.hpp  EscuchadorVerificacionCredenciales.cpp  EscuchadorVerificacionCredenciales.hpp
Server/: AplicacionServidor.cpp  AplicacionServidor.hpp  ConexionCliente.cpp  ConexionCliente.hpp  ConexionServidor.cpp  ConexionServidor.hpp  EscuchadorEntradaTeclado.cpp  EscuchadorEntradaTeclado.hpp  Servidor.cpp  Servidor.hpp  mainServer.cpp  mainServer.hpp
Server/EscuchadoresServer/: EscuchadorCredenciales.hpp  EscuchadorEntradaTeclado.hpp  EscuchadorServer.hpp
docs/: CNAME  _config.yml  index.md
resources/: archivoAltoMalEnviado.xml  archivoAnchoMalEnviado.xml  archivoMalFormato.xml  configuracionDefault.xml  modeloXML.xml
resources/ArchivosXML/: archivoAltoMalEnviado.xml  archivoAnchoMalEnviado.xml  archivoMalFormato.xml  configuracionDefault.xml  configuracionDefault2.xml  configuracionIncial.xml  configuracionInicial.xml
src/: Utils.hpp  main.cpp
src/Client/: Cliente.cpp  Cliente.hpp  EscuchadorSalaDeEspera.cpp  EscuchadorSalaDeEspera.hpp  GameLoop.cpp  GameLoop.hpp  UtilidadesCliente.cpp  (+3 more)
(+796 files in other folders)
